feat: navBar struct

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <app-nav-bar />
 
+<div>
+    <section id='search' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-100 shadow-lg p-4">
+        <h1>search</h1>
+    </section>
+    
+   <section id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-100 shadow-lg p-4">
+        <h1>create</h1>
+    </section>
+</div>
+
 <router-outlet />
