--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
-<nav class="flex flex-col gap-3 text-4xl">
-    <span class="pi pi-user"></span>
-    <span class="pi pi-search"></span>
-    <span class="pi pi-map"></span>
-    <span class="pi pi-plus"></span>
+<nav class="flex flex-col gap-3 text-3xl mt-10 text-roxo-balta fixed">
+    <a href="#user" class="p-7 hover:bg-gray-100"><span class="pi pi-user"></span></a>
+    <a href="#search" class="p-7 hover:bg-gray-100"><span class="pi pi-search"></span></a>
+    <a href="#map" class="p-7 hover:bg-gray-100"><span class="pi pi-map"></span></a>
+    <a href="#create" class="p-7 hover:bg-gray-100"><span class="pi pi-plus"></span></a>
 </nav>
