--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
-<app-nav-bar />
+<body class="font-sans">
+    <app-nav-bar />
 
-<div>
-    <section id='search' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-100 shadow-lg p-4">
-        <h1>search</h1>
-    </section>
-    
-   <section id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-100 shadow-lg p-4">
-        <h1>create</h1>
-    </section>
-</div>
+    <div>
+        <section id='search' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-7">
+            <h1 class="text-gray-500 text-lg mt-6">Buscar um evento</h1>
+            <div class="relative">
+                <span class="pi pi-search absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"></span>
+                <input class="bg-gray-300 rounded-sm w-full h-10 mt-1 focus:outline-none pl-9" type="text" id="search" name="search" [(ngModel)]="eventSearch" (keyup.enter)="searchEvents()">
+            </div>
+        </section>
+        
+        <section id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4">
+            <h1>create</h1>
+        </section>
+    </div>
 
-<router-outlet />
+    <router-outlet />
+</body>
