--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,15 @@
     <app-nav-bar />
 
     <div>
-        <section id='search' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-7">
+        <section id='search' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-[25em] bg-gray-200 p-7">
             <h1 class="text-gray-500 text-lg mt-6">Buscar um evento</h1>
-            <div class="relative">
-                <span class="pi pi-search absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"></span>
+            <div class="relative mb-10">
+                <span class="pi pi-search absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-800"></span>
                 <input class="bg-gray-300 rounded-sm w-full h-10 mt-1 focus:outline-none pl-9" type="text" id="search" name="search" [(ngModel)]="eventSearch" (keyup.enter)="searchEvents()">
             </div>
+
+            <app-event *ngFor="let event of events" [event]="event"></app-event>
+
         </section>
         
         <section id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4">
