--- a/src/app/components/new-event/new-event.component.html
+++ b/src/app/components/new-event/new-event.component.html
@@ -16,5 +16,6 @@
             <input type="text" name="local" class="form-control" [(ngModel)]="model.local" #local="ngModel" required class="font-sans font-normal w-full">
         </label>
         <button type="submit" [disabled]="!eventForm.form.valid" class="font-sans font-normal">Salvar evento</button>
+        <p class="font-sans font-normal">Preciso de ajuda.</p>
     </div>
 </form> 
