--- a/src/app/components/new-event/new-event.component.css
+++ b/src/app/components/new-event/new-event.component.css
@@ -2,6 +2,7 @@
 label{
     padding-bottom: 1rem;
     font-weight: 400;
+    font-size: 1.1rem;
     color: gray;
 }
 input{
@@ -28,4 +29,11 @@ button{
     font-weight: 600;
     padding: 0.5rem;
     font-size: 1.5rem;
+}
+p{
+    margin: auto;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    font-weight: 400;
+    color: gray;
 }
