--- a/src/app/components/new-event/new-event.component.html
+++ b/src/app/components/new-event/new-event.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" #eventForm="ngForm" class="f-full">
+<form (ngSubmit)="onSubmit()" #eventForm="ngForm" class="h-full">
     <div class="form-group" class="flex flex-col">
         <label class="font-sans font-normal">
             Banda
