--- a/src/app/components/new-event/new-event.component.html
+++ b/src/app/components/new-event/new-event.component.html
@@ -8,7 +8,7 @@
         <label class="font-sans font-normal">
             Data
             <br>
-            <input type="text" name="data" class="form-control" [(ngModel)]="model.data" #data="ngModel" required class="font-sans font-normal w-full">
+            <input type="text" name="data" class="form-control" [(ngModel)]="model.date" #data="ngModel" required class="font-sans font-normal w-full">
         </label>
         <label class="font-sans font-normal">
             Local
