feat: new-event in create tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,11 @@
 
         </section>
         
-        <section id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4">
+        <!-- <section id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4">
             <h1>create</h1>
-        </section>
+        </section> -->
+
+        <app-new-event id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4"/>
     </div>
 
     <router-outlet />
