--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-between items-center p-1">
-    <!-- <img src="assets/arena-das-dunas2.jpg" alt="local do evento"> -->
+    <img src="assets/Angra.jpg" alt="local do evento" class="rounded-full h-auto w-16 bg-contain">
     <div>
         <h1 class="font-semibold">{{show.local}}</h1>
         <p>R. Tangipuru, 795 - Barra Funda</p>
         <p>São Paulo - SP</p>
     </div>
-    <div>{{show.date}}</div>
+    <div class="font-semibold text-gray-700">{{show.date}}</div>
 </div>
