--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <app-nav-bar />
 
     <div>
-        <section id='search' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-[25em] bg-gray-200 p-7">
+        <section id='search' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-[30em] bg-gray-200 p-7 z-10">
             <h1 class="text-gray-500 text-lg mt-6">Buscar um evento</h1>
             <div class="relative mb-10">
                 <span class="pi pi-search absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-800"></span>
@@ -17,8 +17,10 @@
             <h1>create</h1>
         </section> -->
 
-        <app-new-event id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4"/>
+        <app-new-event id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4 z-10"/>
     </div>
+
+    <app-map-comp class="z-0 h-full w-full"/>
 
     <router-outlet />
 </body>
