--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             <app-event *ngFor="let show of shows" [show]="show"></app-event>
         </section>
 
-        <app-new-event id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-1/5 bg-gray-200 p-4 z-10"/>
+        <app-new-event id='create' class="tabcontent fixed opacity-0 left-20 top-0 h-full w-[30em] bg-gray-200 p-4 z-10"/>
     </div>
 
     <app-map-comp class="z-0 h-full w-full"/>
